# KireiUI

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN_SYSTEM.md  LICENSE  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build-all-architectures.yml  publish-pypi.yml  release-artifacts.yml
.run/: Black_Check.run.xml  Black_Format.run.xml  Mypy.run.xml  Pytest_All.run.xml  Pytest_Behavior.run.xml  Pytest_Fluent.run.xml  Ruff_Check.run.xml  Ruff_Fix.run.xml  Ruff_Format.run.xml  main.run.xml
docs/: API_REFERENCE.md  ARCHITECTURE.md  COMPONENTS.md  DESIGN_SYSTEM.md  DEVELOPMENT.md  EXAMPLES.md  GETTING_STARTED.md  ROADMAP.md  THEMING.md  icons.md
examples/: basic_controls.py  basic_dashboard.py  component_gallery.py  components_gallery.py  form_example.py  hello_window.py  icon_browser.py  icon_demo.py  kawaii_theme_demo.py  motion_demo.py  qss_custom_theme.py  theme_switching.py
scripts/: import_fluent_icons.py
src/kirei_ui/: __init__.py  locale.py  stack.py  theme.py
src/kirei_ui/app/: __init__.py  application.py  window.py
src/kirei_ui/data/: __init__.py
src/kirei_ui/desktop/: __init__.py
src/kirei_ui/feedback/: __init__.py
src/kirei_ui/icons/: __init__.py  icon.py  registry.py
src/kirei_ui/inputs/: __init__.py
src/kirei_ui/layout/: __init__.py
src/kirei_ui/motion/: __init__.py  animator.py  mixin.py
src/kirei_ui/navigation/: __init__.py
src/kirei_ui/overlay/: __init__.py
src/kirei_ui/resources/icons/fluent/: manifest.json
src/kirei_ui/resources/qss/: base.qss
src/kirei_ui/theme/: __init__.py  loader.py
src/kirei_ui/utils/: __init__.py
src/kirei_ui/widgets/: __init__.py  button.py  choice.py  data_display.py  datetime.py  desktop.py  divider.py  feedback.py  input.py  label.py  layout_plus.py  number.py  overlay.py  select.py  switch.py
styles/neutral_dark/: extras.qss  tokens.toml
styles/neutral_light/: extras.qss  tokens.toml
styles/silicon_light/: 00_tokens.qss  01_base.qss  02_layout.qss  03_inputs.qss  04_feedback.qss  05_navigation.qss  06_overlay.qss  07_data.qss  08_desktop.qss  99_overrides.qss  extras.qss  tokens.toml
styles/silicon_night/: extras.qss  tokens.toml
tests/: test_behavior.py  test_containers.py  test_fluent.py  test_grouped_imports.py  test_icons.py  test_import.py  test_stack.py  test_theme.py
