[project]
name = "kirei-ui"
version = "0.1.0"
description = "A modern PySide6 UI framework for building elegant desktop tools."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]

authors = [
    { name = "Siling" }
]

keywords = [
    "kireiui",
    "pyside6",
    "qt6",
    "ui-framework",
    "desktop",
    "widgets",
    "qss",
    "design-system"
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Desktop Environment",
]

dependencies = [
    "PySide6>=6.6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "build>=1.2.0",
    "twine>=5.0.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
]

[project.urls]
Homepage = "https://github.com/ExMikuPro/KireiUI"
Repository = "https://github.com/ExMikuPro/KireiUI"
Issues = "https://github.com/ExMikuPro/KireiUI/issues"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["kirei_ui*"]

[tool.setuptools.package-data]
kirei_ui = [
    "resources/*.png",
    "resources/qss/*.qss",
    "resources/icons/*.svg",
    "resources/icons/fluent/**/*.svg",
    "resources/icons/fluent/manifest.json",
    "resources/icons/fluent/LICENSE",
    "resources/icons/fluent/NOTICE",
]

ignore = []

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
files = ["src/kirei_ui"]
ignore_missing_imports = true
strict = false
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "examples", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "N",
    "RUF",
]
ignore = [
    "N802",
    "N803",
    "N806",
]

[tool.ruff.lint.per-file-ignores]
"src/kirei_ui/__init__.py" = ["F401"]
"examples/*.py" = ["T201"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

[tool.pytest.ini_options]
pythonpath = ["src"]
